feat: add error handling for InaccessibleObjectException in SessionWindowKafkaExample and update Docker images to use JDK 17